# simple-fastapi-template

./: .gitignore  Makefile  README.md  pyproject.toml
api/: main.py
api/v1/: __init__.py
api/v1/models/: items.py
api/v1/routers/: items.py
api/v2/: __init__.py
api/v2/models/: items.py  users.py
api/v2/routers/: items.py  users.py
api/v3/: __init__.py
api/v3/models/: items.py  users.py
api/v3/routers/: items.py  users.py
tests/: test_items.py
